--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -51,7 +51,8 @@
   height: 100%;
   cursor: pointer;
   transition: transform 0.3s ease;
-  border-radius: 5%;
+  border-radius: 15px;
+  border: 3px solid tomato;
 }
 
 .footer-content-right,
