--- a/src/components/menu/ExploreMenu.css
+++ b/src/components/menu/ExploreMenu.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  border-radius: 15px;
 }
 
 .explore-menu h1 {
@@ -69,20 +70,25 @@
 @media (max-width: 1281px) {
   .explore-menu {
     margin-top: -5px;
+    padding: 16px 20px !important;
+  }
+  .explore-menu-list {
+    padding: 25px 0px;
+    flex-wrap: nowrap !important;
   }
   .explore-menu h1 {
     font-size: 1.9em;
   }
   .explore-menu p {
-    font-size: 1.4em;
+    font-size: 1.05em;
     margin-top: -20px;
   }
   .explore-menu-list-item {
     width: 100px;
   }
   .explore-menu-list-item img {
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
   }
   .explore-menu-list-item p {
     margin-top: 5px;
@@ -182,6 +188,12 @@
   }
 }
 
+@media (max-width: 564px) {
+  .explore-menu-text {
+    max-width: 100%;
+  }
+}
+
 @media (max-width: 541px) {
   .explore-menu {
     margin-top: -15px;
@@ -226,6 +238,7 @@
   }
   .explore-menu-list {
     margin-top: -5px;
+    padding: 10px 0px;
   }
   .explore-menu-list-item {
     width: 50px;
@@ -275,28 +288,90 @@
   }
 }
 
-/* ------------------- */
+@media (max-width: 325px) {
+  .explore-menu-list-item img {
+    width: 35px;
+    height: 35px;
+  }
+  .explore-menu-list-item p {
+    margin-top: 5px;
+    font-size: 0.6em;
+  }
+}
+
+@media (max-width: 293px) {
+  .explore-menu-list-item p {
+    font-size: 0.5em;
+  }
+  .explore-menu-list {
+    gap: 5px !important;
+  }
+}
+
+@media (max-width: 266px) {
+  .explore-menu {
+    padding: 10px !important;
+  }
+  .explore-menu h4 {
+    font-size: 1em;
+    margin-bottom: 2px !important;
+  }
+  .explore-menu p {
+    font-size: 0.6em;
+  }
+  .explore-menu-list-item img {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 229px) {
+  .explore-menu {
+    padding: 10px !important;
+  }
+  .explore-menu-list {
+    padding: 0px;
+  }
+  .explore-menu h4 {
+    font-size: 0.8em;
+    margin-bottom: 2px !important;
+  }
+  .explore-menu p {
+    font-size: 0.5em;
+  }
+  .explore-menu-list-item img {
+    width: 25px;
+    height: 25px;
+  }
+}
+
+@media (max-width: 198px) {
+  .explore-menu {
+    border-radius: 5px;
+  }
+  .explore-menu p {
+    font-size: 0.45em;
+  }
+}
+
 .explore-menu-list {
   display: flex;
-  flex-wrap: wrap;  /* Makes items go to a new row when needed */
-  justify-content: center; /* Centers the items */
-  gap: 16px; /* Adds spacing between items */
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
 }
 
 .explore-menu-list-item {
-  flex: 1 1 200px; /* Makes each item take up space and shrink */
+  flex: 1 1 200px;
   max-width: 200px;
   text-align: center;
 }
 
-/*  For tablets (768px and below) */
 @media (max-width: 768px) {
   .explore-menu-list {
-    justify-content: center; /* Keeps items centered */
+    justify-content: center;
   }
   .explore-menu-list-item {
-    flex: 1 1 150px; /* Adjusts size */
+    flex: 1 1 150px;
   }
 }
-
-
