--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -212,6 +212,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: -25px !important;
 }
 
 .avatar-container.selected {
@@ -284,6 +285,10 @@ button {
   background-color: rgb(255, 153, 109);
 }
 
+.button-login {
+  margin-right: -50px;
+}
+
 @media (max-width: 1281px) {
   .navbar {
     height: 100px;
@@ -337,6 +342,9 @@ button {
   }
   .navbar-menu {
     gap: 12px;
+  }
+  .button-login {
+    margin-right: -30px;
   }
 }
 
@@ -447,6 +455,12 @@ button {
     margin-top: 7px !important;
     width: 50px !important;
   }
+  .navbar .button-login {
+    margin-right: 10px !important;
+    margin-top: -75px !important;
+    padding: 0px 5px !important;
+    height: 48px !important;
+  }
 }
 
 @media (max-width: 745px) {
@@ -486,6 +500,13 @@ button {
   }
 }
 
+@media (max-width: 700px) {
+  .navbar .button-login {
+    margin-right: 5px !important;
+    height: 48px !important;
+  }
+}
+
 @media (max-width: 690px) {
   .ic_camera {
     margin-top: -107px;
@@ -506,6 +527,14 @@ button {
   }
   .ic_camera {
     margin-right: 110px;
+  }
+}
+
+@media (max-width: 685px) {
+  .navbar .button-login {
+    margin-right: 5px !important;
+    font-size: 0.8em;
+    height: 48px !important;
   }
 }
 
@@ -567,30 +596,75 @@ button {
   }
 }
 
-@media (max-width: 575px) {
+/* @media (max-width: 577px) {
   .navbar {
-    margin-top: 0px;
-    height: 85px;
+    height: 60px !important;
+  }
+  .navbar button {
+    margin-top: -70px !important;
+    font-size: 10px !important;
+  }
+  .dropdown button {
+    margin-left: -15px !important;
+  }
+  .navbar .button-login {
+    margin-top: -86px !important;
+    padding: 0px 5px !important;
+    height: 35px !important;
+  }
+  .navbar .ic_search {
+    margin-top: -71px !important;
+    font-size: 20px !important;
+  }
+  .navbar-right {
+    margin-left: 95px !important;
+  }
+  .navbar .logo-navbar img {
+    margin-top: -15px !important;
+    width: 90px;
+    height: 50px;
+  }
+  .search-input {
+    width: 63% !important;
+    margin-top: -140px !important;
+    height: 30px !important;
+    font-size: 0.75em !important;
+  }
+  .dropdown button{
+    margin-left: 22px !important;
+  }
+  .dropdown{
+    margin-left: 20px !important;
+  }
+  .ic_camera {
+    margin-right: 119px;
+  }
+} */
+
+@media (max-width: 576px) {
+  .navbar {
+    height: 65px !important;
   }
   .navbar-menu {
     font-size: 0.9em;
     gap: 15px;
   }
   .search-input {
+    height: 30px !important;
+    font-size: 0.75em !important;
     width: 75%;
-    margin-top: 16px;
+    margin-top: 22px;
     margin-left: 30px !important;
-    height: 35px;
-    font-size: 0.9em;
-    margin-left: 15px;
   }
   .ic_search {
-    margin-top: 8px !important;
-    margin-left: -35px;
+    margin-top: 9px !important;
+    margin-left: -25px;
+    font-size: 20px !important;
   }
   .ic_camera {
-    margin-top: 15px;
-    margin-right: 130px;
+    margin-top: 19px;
+    margin-right: 122px;
+    font-size: 20px !important;
   }
   .navbar button {
     margin-left: 60px;
@@ -609,14 +683,14 @@ button {
     margin-top: -5px;
   }
   .avatar-container {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     margin-left: 30px;
-    margin-top: 15px;
+    margin-top: 7px;
   }
   .avatar-img {
-    width: 33px;
-    height: 33px;
+    width: 28px;
+    height: 28px;
   }
   .hamburger-menu-btn {
     font-size: 1em !important;
@@ -634,6 +708,16 @@ button {
   .dropdown-menu.show {
     margin-right: -20px;
     margin-top: 5px;
+  }
+  .navbar .button-login {
+    margin-top: -40px !important;
+    padding: 0px 5px !important;
+    margin-right: 15px !important;
+    height: 35px !important;
+  }
+  .navbar button {
+    margin-top: 25px !important;
+    font-size: 10px !important;
   }
 }
 
@@ -662,89 +746,155 @@ button {
 }
 
 @media (max-width: 490px) {
-  .search-input {
-    width: 70%;
-    margin-top: 12px;
-  }
   .dropdown {
     margin-left: 25px !important;
     margin-top: -48px;
   }
   .ic_camera {
-    margin-right: 135px;
-    margin-top: 8px;
-  }
-  .avatar-container {
-    width: 40px;
-    height: 40px;
-    margin-left: 30px;
-    margin-top: 8px;
+    margin-right: 100px;
+    margin-top: 20px;
   }
   .navbar {
     height: 60px;
   }
-  .ic_search {
+  .navbar button {
     margin-top: 5px !important;
+    margin-left: 15px !important;
+    font-size: 10px !important;
+  }
+  .avatar-container {
+    width: 35px;
+    height: 35px;
+    margin-left: 30px;
+    margin-top: 7px;
+  }
+  .avatar-img {
+    width: 28px;
+    height: 28px;
   }
 }
 
 @media (max-width: 480px) {
-  .search-input {
-    height: 30px;
-  }
   .ic_camera {
-    font-size: 21px !important;
-    margin-right: 130px;
+    font-size: 18px !important;
+    margin-right: 105px;
   }
   .navbar {
     height: 60px;
   }
+  .search-input {
+    font-size: 0.7em !important;
+    width: 78%;
+    margin-top: 22px;
+    margin-left: 10px !important;
+  }
   .ic_search {
-    margin-top: 5px !important;
-    font-size: 20px !important;
+    margin-top: 9px !important;
+    margin-left: -25px;
+    font-size: 17px !important;
+  }
+  .navbar .button-login {
+    margin-top: -40px !important;
+    padding: 0px 5px !important;
+    margin-right: 15px !important;
+    height: 35px !important;
+    font-size: 0.6em !important;
+  }
+  .dropdown button {
+    margin-left: 7px !important;
+  }
+  .avatar-container {
+    width: 34px;
+    height: 34px;
+    margin-left: 30px;
+    margin-top: 7px;
+  }
+  .avatar-img {
+    width: 27px;
+    height: 27px;
   }
 }
 
 @media (max-width: 455px) {
   .ic_camera {
-    font-size: 21px !important;
-    margin-right: 122px;
+    font-size: 18px !important;
+    margin-right: 100px;
   }
   .dropdown {
     margin-left: 18px !important;
     margin-top: -48px;
   }
+  .dropdown button {
+    margin-left: 10px !important;
+  }
+}
+
+@media (max-width: 440px) {
+  .dropdown button {
+    margin-left: 8px !important;
+  }
+}
+
+@media (max-width: 433px) {
+  .dropdown button {
+    margin-left: 5px !important;
+  }
 }
 
 @media (max-width: 430px) {
   .ic_camera {
-    font-size: 21px !important;
-    margin-right: 115px;
+    margin-right: 90px;
   }
   .dropdown {
     margin-left: 12px !important;
   }
+  .dropdown button {
+    margin-left: 10px !important;
+  }
+}
+
+@media (max-width: 420px) {
+  .ic_camera {
+    margin-right: 90px;
+  }
+  .dropdown {
+    margin-left: 12px !important;
+  }
+  .dropdown button {
+    margin-left: 8px !important;
+  }
 }
 
 @media (max-width: 410px) {
+  .navbar {
+    height: 55px !important;
+  }
   .search-input {
-    width: 67%;
+    width: 74%;
+    height: 25px !important;
+    font-size: 0.6em !important;
+  }
+  .ic_search {
+    margin-top: 10px !important;
+    margin-left: -25px;
+    font-size: 15px !important;
   }
   .ic_camera {
-    font-size: 21px !important;
-    margin-right: 120px;
+    font-size: 16px !important;
+    margin-right: 100px;
   }
   .dropdown {
     margin-left: 2px !important;
   }
   .avatar-container {
-    width: 37px;
-    height: 37px;
-    margin-top: 5px;
+    width: 28px;
+    height: 28px;
+    margin-left: 30px;
+    margin-top: 7px;
   }
   .avatar-img {
-    width: 25px;
-    height: 25px;
+    width: 21px;
+    height: 21px;
   }
   .navbar button {
     padding: 5px !important;
@@ -758,15 +908,32 @@ button {
   .dropdown-item {
     padding: 3px 10px !important;
   }
+  .navbar .button-login {
+    margin-top: -25px !important;
+    font-size: 0.58em !important;
+    padding: 0px 7px !important;
+    height: 25px !important;
+  }
+  .dropdown button {
+    margin-top: 16px !important;
+    height: 25px !important;
+  }
+}
+
+@media (max-width: 385px) {
+  .navbar .button-login {
+    padding: 0px 5px !important;
+  }
 }
 
 @media (max-width: 380px) {
   .search-input {
-    width: 72%;
+    width: 75%;
     margin-left: 10px !important;
+    height: 22px !important;
   }
   .ic_camera {
-    margin-right: 110px;
+    margin-right: 90px;
   }
   .user-menu .avatar-container {
     margin-left: 10px !important;
@@ -776,9 +943,25 @@ button {
   }
 }
 
+@media (max-width: 360px) {
+  .navbar .button-login {
+    margin-right: 3px !important;
+    padding: 0px 5px !important;
+  }
+}
+
+@media (max-width: 355px) {
+  .ic_camera {
+    margin-right: 85px;
+  }
+  .dropdown button {
+    margin-left: 5px !important;
+  }
+}
+
 @media (max-width: 350px) {
   .ic_camera {
-    margin-right: 105px;
+    margin-right: 85px;
   }
   .user-menu .avatar-container {
     margin-left: 12px !important;
@@ -786,20 +969,35 @@ button {
   .dropdown {
     margin-left: -2px !important;
   }
+  .dropdown button {
+    margin-left: 8px !important;
+  }
+}
+
+@media (max-width: 340px) {
+  .ic_camera {
+    margin-right: 80px;
+  }
+  .dropdown button {
+    margin-left: 5px !important;
+  }
 }
 
 @media (max-width: 330px) {
   .search-input {
-    width: 67%;
+    width: 74%;
   }
   .ic_camera {
-    margin-right: 112px;
+    margin-right: 80px;
   }
   .user-menu .avatar-container {
     margin-left: 12px !important;
   }
   .dropdown {
     margin-left: -12px !important;
+  }
+  .dropdown button {
+    margin-left: 10px !important;
   }
   .dropdown-menu-list .dropdown-item {
     font-size: 0.8em;
@@ -808,16 +1006,25 @@ button {
 
 @media (max-width: 310px) {
   .ic_camera {
-    margin-right: 108px;
+    margin-right: 75px;
   }
   .dropdown {
     margin-left: -15px !important;
   }
 }
 
+@media (max-width: 300px) {
+  .search-input {
+    width: 72%;
+  }
+  .dropdown button {
+    margin-left: 5px !important;
+  }
+}
+
 @media (max-width: 290px) {
   .ic_camera {
-    margin-right: 102px;
+    margin-right: 75px;
   }
   .dropdown {
     margin-left: -20px !important;
@@ -828,72 +1035,93 @@ button {
   .hamburger-menu-btn {
     font-size: 0.8rem !important;
   }
-  .avatar-container {
-    width: 34px;
-    height: 34px;
-    margin-top: 5px;
+  .dropdown button {
+    margin-left: 10px !important;
   }
-  .avatar-img {
-    width: 22px;
-    height: 22px;
+}
+
+@media (max-width: 285px) {
+  .dropdown button {
+    margin-left: 8px !important;
+  }
+}
+
+@media (max-width: 275px) {
+  .dropdown button {
+    margin-left: 5px !important;
   }
 }
 
 @media (max-width: 270px) {
   .ic_camera {
-    margin-right: 80px;
-    font-size: 18px !important;
+    margin-right: 70px;
+    font-size: 13px !important;
   }
   .dropdown {
     margin-left: -24px !important;
   }
   .search-input {
-    font-size: 0.8em;
+    font-size: 0.5em !important;
   }
   .ic_search {
-    font-size: 18px !important;
+    font-size: 13px !important;
     margin-left: -23px;
   }
   .hamburger-menu-btn {
     font-size: 0.8rem !important;
   }
-  .avatar-container {
-    width: 32px;
-    height: 32px;
+  .navbar .button-login {
+    margin-right: 5px !important;
+    padding: 0px 3px !important;
+    font-size: 0.5em !important;
   }
-  .avatar-img {
-    width: 20px;
-    height: 20px;
+  .dropdown button {
+    margin-left: 15px !important;
+  }
+  .user-menu .avatar-container {
+    margin-left: 23px !important;
+    margin-top: 7px;
   }
 }
 
+@media (max-width: 255px) {
+  .ic_camera {
+    margin-right: 63px;
+    font-size: 13px !important;
+  }
+  .dropdown button {
+    margin-left: 10px !important;
+  }
+  .avatar-container {
+    width: 26px;
+    height: 26px;
+  }
+  .avatar-img {
+    width: 16px;
+    height: 16px;
+  }
+}
+
+
 @media (max-width: 250px) {
   .ic_camera {
-    margin-right: 65px !important;
-    font-size: 15px !important;
+    margin-right: 57px !important;
+    font-size: 13px !important;
   }
   .ic_search {
-    font-size: 15px !important;
+    font-size: 12px !important;
     margin-left: -18px;
   }
   .user-menu .avatar-container {
-    margin-left: 20px !important;
+    margin-left: 24px !important;
+    margin-top: 8px !important;
   }
   .dropdown {
     margin-left: -19px !important;
     margin-top: -36px !important;
   }
-  .search-input {
-    width: 71%;
-    font-size: 0.7em;
-    margin-left: 5px !important;
-    height: 25px;
-  }
-  .navbar {
-    margin-top: -5px;
-    height: 50px;
-  }
   .avatar-container {
+    
     width: 28px;
     height: 28px;
   }
@@ -914,6 +1142,13 @@ button {
   .dropdown-item {
     padding: 3px 10px !important;
   }
+  .dropdown button {
+    margin-left: 5px !important;
+    margin-top: 2px !important;
+  }
+  .navbar .button-login-login {
+    margin-top: -100px !important;
+  }
 }
 
 @media (max-width: 230px) {
@@ -924,19 +1159,23 @@ button {
     margin-left: -58px !important;
     margin-top: 12px !important;
   }
+  .dropdown button {
+    margin-top: 10px !important;
+    margin-left: 8px !important;
+  }
   .user-menu .avatar-container {
-    margin-left: 223px !important;
-    margin-top: -62px !important;
+    margin-left: 230px !important;
+    margin-top: -72px !important;
     position: fixed;
     z-index: 999;
   }
   .avatar-container {
-    width: 28px;
-    height: 28px;
+    width: 22px;
+    height: 22px;
   }
   .avatar-img {
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
   }
   .dropdown-menu.show {
     margin-left: 70px;
@@ -948,15 +1187,36 @@ button {
   .dropdown-item {
     padding: 3px 10px !important;
   }
+  .navbar .button-login {
+    margin-right: -195px !important;
+    padding: 0px 3px !important;
+    font-size: 0.5em;
+    height: 28px !important;
+  }
 }
 
 @media (max-width: 220px) {
+  .ic_camera {
+    margin-right: 68px !important;
+  }
+  .search-input {
+    width: 68%;
+    margin-left: 5px !important;
+  }
   .dropdown {
     margin-left: -57px !important;
     margin-top: 12px !important;
   }
   .user-menu .avatar-container {
     margin-left: 220px !important;
+  }
+  .navbar .button-login {
+    margin-right: -190px !important;
+    margin-top: -28px !important;
+  }
+  .dropdown button {
+    margin-left: -5px !important;
+    margin-top: 10px !important;
   }
 }
 
@@ -966,7 +1226,7 @@ button {
   }
 }
 
-@media (max-width: 210px) {
+/* @media (max-width: 210px) {
   .ic_camera {
     margin-right: 58px !important;
   }
@@ -985,10 +1245,47 @@ button {
     width: 16px;
     height: 16px;
   }
-}
+  .navbar .button-login {
+    margin-right: -185px !important;
+  }
+} */
 
 @media (max-width: 203px) {
   .user-menu .avatar-container {
     margin-left: 211px !important;
+  }
+}
+
+@media (max-width: 195px) {
+  .navbar .button-login {
+    margin-right: -180px !important;
+  }
+}
+
+@media (max-width: 185px) {
+  .navbar .button-login {
+    margin-right: -175px !important;
+  }
+  .user-menu .avatar-container {
+    margin-left: 207px !important;
+  }
+}
+
+@media (max-width: 173px) {
+  .navbar .button-login {
+    margin-right: -170px !important;
+    font-size: 0.45em;
+  }
+  .user-menu .avatar-container {
+    margin-left: 200px !important;
+  }
+  .ic_camera {
+    margin-right: 60px !important;
+  }
+}
+
+@media (max-width: 160px) {
+  .navbar .button-login {
+    margin-right: -167px !important;
   }
 }
